--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
+                <div class="promo__wrapper">
+                    <h1 class="promo__header">Подбор пульсометра</h1>
+                    <div class="promo__subheader">с учётом Вашего уровня подготовки</div>
+
+                    <div class="promo__icons">
+                        <div class="promo__icon"><img src="icon/header/time_stopwatch.png" alt="time stopwatch">Время подбора: 10 минут</div>
+                        <div class="promo__icon"><img src="icon/header/app_hand_cart.png" alt="app hand cart">Бесплатная доставка</div>
+                        <div class="promo__icon"><img src="icon/header/messages.png" alt="messages">Ответим на все вопросы</div>
+                    </div>
+                    <button class="button button_main">заказать КОНСУЛЬТАЦИЮ</button>
+                    <div class="promo__link">или <a href="">ПЕРЕЙТИ В КАТАЛОГ</a></div>
+                </div>
+            
         </div>
     </div>
 </body>
