--- a/index.html
+++ b/index.html
@@ -38,7 +38,45 @@
                     <button class="button button_main">заказать КОНСУЛЬТАЦИЮ</button>
                     <div class="promo__link">или <a href="">ПЕРЕЙТИ В КАТАЛОГ</a></div>
                 </div>
-            
+        </div>
+    </div>
+    <div class="advantages">
+        <div class="container">
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <img src="icon/advantage/cup.png" alt="cup" class="advantages__icon">
+                    <div class="advantages__subtitle">
+                        Делимся опытом
+                    </div>
+                    <div class="advantages__descr">
+                        Наши сотрудники всегда готовы поделиться своим опытом, 
+                        так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icon/advantage/heart.png" alt="heart" class="advantages__icon">
+                    <div class="advantages__subtitle">
+                        Заботимся о здоровье
+                    </div>
+                    <div class="advantages__descr">
+                        Мы работаем для того, 
+                        чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!           
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icon/advantage/shoe.png" alt="shoe" class="advantages__icon">
+                    <div class="advantages__subtitle">
+                        Учим бегать
+                    </div>
+                    <div class="advantages__descr">
+                        Помогаем с обучением 
+                        правильной технике бега!<br>
+                        Дружим с крупнейшей школой бега в России - 
+                        <a href="#">I LOVE RUNNING.</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
