--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
@@ -11,7 +12,7 @@
     <title>pulse</title>
 </head>
 <body>
-    <section class="promo">
+    <section id="up" class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -24,7 +25,7 @@
 
                 <div class="header__contacts">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                    <button class="button">заказать звонок</button>
+                    <button data-modal="consultation" class="button">заказать звонок</button>
                 </div>
             </header>
                 <div class="promo__wrapper">
@@ -36,7 +37,7 @@
                         <div class="promo__icon"><img src="icon/header/app_hand_cart.png" alt="app hand cart">Бесплатная доставка</div>
                         <div class="promo__icon"><img src="icon/header/messages.png" alt="messages">Ответим на все вопросы</div>
                     </div>
-                    <button class="button button_main">заказать КОНСУЛЬТАЦИЮ</button>
+                    <button data-modal="consultation" class="button button_main">заказать КОНСУЛЬТАЦИЮ</button>
                     <div class="promo__link">или <a href="">ПЕРЕЙТИ В КАТАЛОГ</a></div>
                 </div>
         </div>
@@ -56,7 +57,7 @@
                     </div>
                 </div>
                 <div class="advantages__item">
-                    <img src="icon/advantage/heart.png" alt="heart" class="advantages__icon">
+                    <img src="icon/advantage/heart.png" alt="heart" class="advantages__icon advantages__icon_animated">
                     <div class="advantages__subtitle">
                         Заботимся о здоровье
                     </div>
@@ -90,9 +91,9 @@
                 Просто заполните форму заявки<br>
                 и мы перезвоним вам в течении 10 минут
             </div>
-            <form class="feed-form" action="#">
+            <form id="consultation-form" class="feed-form" action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
                 <button class="button button_submit">Заказать консультацию</button>
             </form>
@@ -125,7 +126,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active ">
                             <img src="icon/Card-Product.png" alt="pulsometr" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__subtitle">Пульсометр Polar</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
@@ -380,10 +381,10 @@
             </div>
         </div>
     </section>
-    <section class="reviews">
+    <section class="reviews" >
         <div class="container">
-            <div class="title">отзывы клиентов</div>
-            <div class="reviews__wrapper">
+                <div class="title">отзывы клиентов</div>
+            <div class="reviews__wrapper animate__fadeInUp wow animate__animated" data-wow-duration="2s" data-wow-delay="0.5s">
                 <div class="reviews__items">
                     <img src="icon/recall/recall_1.png" alt="">
                 </div>
@@ -394,7 +395,7 @@
                         Спасибо, RunSmart! </div>
                 </div>
             </div>
-            <div class="reviews__wrapper">
+            <div class="reviews__wrapper animate__fadeInUp wow animate__animated" data-wow-duration="2s" data-wow-delay="0.5s">
                 <div class="reviews__items">
                     <img src="icon/recall/recall_2.png" alt="">
                 </div>
@@ -405,7 +406,7 @@
                         Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.<br><br>С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
                 </div>
             </div>
-            <div class="reviews__wrapper">
+            <div class="reviews__wrapper animate__fadeInUp wow animate__animated" data-wow-duration="2s" data-wow-delay="0.5s">
                 <div class="reviews__items">
                     <img src="icon/recall/recall_3.png" alt="">
                 </div>
@@ -430,8 +431,50 @@
         </div>
     </footer>
 
+    <div class="overlay">
+        <div class="modal" id="consultation">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Просто заполните форму заявки</div>
+            <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form feed-form_mt25" action="#">
+                <input name="name"  placeholder="Ваше имя" type="text">
+                <input name="phone"  placeholder="Ваш телефон">
+                <input name="email"  placeholder="Ваш E-mail" type="email">
+                <button class="button button_submit">Заказать консультацию</button>
+            </form>
+        </div>
+
+        <div class="modal" id="order">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Ваш заказ:</div>
+            <div class="modal__descr">Пульсометр Polar FT1</div>
+            <form class="feed-form feed-form_mt25" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+                <button class="button button_submit">КУПИТЬ</button>
+            </form>
+        </div>
+
+        <div class="modal modal_mini" id="thanks">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+            <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
+        </div>
+
+    </div>
+
+
+    <a href="#up" class="pageup">
+        <img src="icon/arrow up/up.svg" alt="up">
+    </a>
+    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
