--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
     <section class="advantages">
         <div class="container">
-            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <h2 class="title animate__bounceInLeft animate__animated wow">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__wrapper">
                 <div class="advantages__item">
                     <img src="icon/advantage/cup.png" alt="cup" class="advantages__icon">
@@ -114,8 +114,8 @@
     
     <section class="catalog">
         <div class="container">
-            <h2 class="title">Каталог пульсометров</h2>
-            <ul class="catalog__tabs">
+            <h2 class="title animate__bounceInLeft animate__animated wow" >Каталог пульсометров</h2>
+            <ul class="catalog__tabs animate__animated animate__bounceInLeft wow" data-wow-duration="1s" data-wow-delay="0.3s">
                 <li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li>
                 <li class="catalog__tab"><div>для бега</div></li>
                 <li class="catalog__tab"><div>для триатлона</div></li>
@@ -383,7 +383,7 @@
     </section>
     <section class="reviews" >
         <div class="container">
-                <div class="title">отзывы клиентов</div>
+                <div class="title animate__bounceInLeft animate__animated wow">отзывы клиентов</div>
             <div class="reviews__wrapper animate__fadeInUp wow animate__animated" data-wow-duration="2s" data-wow-delay="0.5s">
                 <div class="reviews__items">
                     <img src="icon/recall/recall_1.png" alt="">
